--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,9 @@
 .DS_Store
 Person-sitting-in-front-of-monitors.svg
 Tick.svg
+Calculator.png
+EtchASketch.png
+MortgageCalculator.png
+RockPaperScissors.png
+TaxCalculator.png
+TicTacToe.png
